--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,11 @@ set -g history-limit 100000
 
 # use VI
 set-window-option -g mode-keys vi
+unbind -t vi-copy Enter   
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+#Fix for pbcopy on tmux
+set-option -g default-command "tmux rename-window tmux; reattach-to-user-namespace -l zsh"
 
 # Use ctrl-e instead of ctrl-b
 set -g prefix C-e
