Fix mouse scrolling in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,6 +51,10 @@ set-window-option -g window-status-current-fg black
 
 set -g mouse-utf8 on
 set -g mouse on
+bind -n WheelUpPane if-shell -Ft = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -t vi-copy WheelUpPane   halfpage-up
+bind -t vi-copy WheelDownPane halfpage-down
 
 # Pane mappings (Will work with Mac only if option key is meta, see readme)
 
