--- a/tmux.conf
+++ b/tmux.conf
@@ -100,7 +100,7 @@ bind % split-window -h -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 
 #Fix for pbcopy on tmux
-if-shell "uname | grep -q Darwin" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
+set-option -g default-command \"reattach-to-user-namespace -l zsh\"
 
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
